senseless calculations on svg

--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -1,6 +1,8 @@
 .game {
-  width: 400px;
-  height: 400px;
+  width: 70vw;
+  height: 70vw;
+  max-width: 800px;
+  max-height: 800px;
 }
 
 .canvas {
