--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -4,14 +4,42 @@
   height: 50vw;
   max-width: 800px;
   max-height: 800px;
+  position: relative;
 
   svg {
+    position: absolute;
+    padding: 10px;
     * {
       stroke: theme.$colorSecondary;
     }
   }
-}
 
-.canvas {
-  position: absolute;
+  .controls {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .row {
+      display: flex;
+      justify-content: space-between;
+
+      .field {
+        height: 2rem;
+        width: 2rem;
+        border-radius: 1rem;
+        border: 1px solid #000;
+        background: theme.$colorSecondary;
+        &:not([disabled]) {
+          cursor: pointer;
+        }
+        &[disabled] {
+          background: darken(theme.$colorSecondary,20);
+        }
+      }
+    }
+  }
+
 }
