--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -1,5 +1,23 @@
 @use '../../theme';
+
 .game {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 2rem;
+  width: 100%;
+}
+
+.controls {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex: 1;
+}
+
+.board {
   width: 50vw;
   height: 50vw;
   max-width: 800px;
@@ -14,7 +32,7 @@
     }
   }
 
-  .controls {
+  .fields {
     position: absolute;
     width: 100%;
     height: 100%;
