adjacent field and winning logic

--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -57,6 +57,12 @@
         &[disabled] {
           background: darken(theme.$colorSecondary,40);
         }
+        &.winningField {
+          background: red;
+        }
+        &.adjacentField {
+          background: yellow;
+        }
       }
     }
   }
