--- a/src/components/Stone/Stone.module.scss
+++ b/src/components/Stone/Stone.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 50%;
+  width: min-content;
   .emoji {
     position: absolute;
     font-size: 1.5rem;
