--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @use 'theme';
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Share+Tech+Mono&display=swap');
 
 * {
   box-sizing: border-box;
