--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,5 @@
+@use 'theme';
+
 .container {
   display: flex;
   gap: 2rem;
@@ -6,4 +8,12 @@
   align-items: center;
   justify-content: center;
   min-height: 100%;
+  .toast {
+    background: theme.$colorSecondary;
+    color: darken(theme.$colorPrimary,10);
+    border-radius: 2rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
 }
+
