--- a/src/components/Game/Game.module.scss
+++ b/src/components/Game/Game.module.scss
@@ -46,7 +46,7 @@
   flex-wrap: wrap;
   gap: 2rem;
   width: 100%;
-    .playerInfo, .status {
+    .playerInfo, .statusBox {
       flex-grow: 1;
       flex-basis: 0;
       text-align: center;
@@ -110,19 +110,40 @@
       }
     }
 
-    .status {
+    .statusBox {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 1rem;
-      .playAgain {
-        width: auto;
+      justify-content: space-evenly;
+      gap: 3rem;
+      > * {
+        flex: 1;
+      }
+      .statusInfo {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        .playAgain {
+          width: auto;
+        }
+      }
+      .phaseInfo {
+        @media screen and (max-width: 997px) {
+          display: none
+        }
+        text-align: left;
+        color: darken(theme.$colorSecondary, 20);
+        h3 {
+          color: darken(theme.$colorSecondary, 20);
+          margin-bottom: 1rem;
+        }
       }
     }
 }
 
 .pulse {
-  animation: pulse 1s normal forwards ease-in-out;
+  animation: pulse 0.5s normal forwards ease-in-out;
 }
 
 
@@ -246,7 +267,7 @@
   }
 
   50% {
-    transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.1, 1.1, 1.1);
   }
 
   to {
