--- a/src/components/Fields/Fields.module.scss
+++ b/src/components/Fields/Fields.module.scss
@@ -34,7 +34,7 @@
   justify-content: space-between;
   @include sxy;
 
-  .stone {
+  .token {
     width: 100%;
     height: 100%;
     display: flex;
@@ -44,8 +44,14 @@
     transition: transform 750ms ease-in-out;
     pointer-events: none;
     z-index: 2;
-    > * {
+    .tokenWrapper {
       transition: transform 750ms ease-in-out;
+      > * {
+        transition: none;
+        // animation: rotate-center 0.6s ease-in-out both;
+        // animation: flip-horizontal-bottom 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+        animation: appear 0.5s cubic-bezier(0.26, 0.53, 0.74, 1.48);
+      }
     }
   }
 
@@ -93,3 +99,36 @@
     box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
   }
 }
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
+  }
+}
+
+/*@keyframes flip-horizontal-bottom {
+  0% {
+    transform: rotateX(0);
+  }
+  50% {
+    transform: rotateX(-180deg);
+  }
+  100% {
+    transform: rotateX(0);
+  }
+}
+
+@keyframes rotate-center {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}*/
