--- a/src/components/Token/Token.module.scss
+++ b/src/components/Token/Token.module.scss
@@ -12,7 +12,9 @@
   }
 }
 .octagon {
+  overflow: visible;
   * {
     fill: theme.$colorSecondary;
+    filter: drop-shadow( 0px 1px 1px rgba(0, 0, 0, .6));
   }
 }
