--- a/src/components/features/ShareInfo/ShareInfo.module.scss
+++ b/src/components/features/ShareInfo/ShareInfo.module.scss
@@ -1,5 +1,16 @@
 @use '../../../theme';
 
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  button {
+    max-width: max-content;
+  }
+}
+
 .shareInfo {
   display: flex;
   align-items: center;
