--- a/src/components/features/PlayerInfoBox/PlayerInfoBox.module.scss
+++ b/src/components/features/PlayerInfoBox/PlayerInfoBox.module.scss
@@ -11,10 +11,11 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 3rem;
-  @media screen and (min-width: 997px) {
+  min-width: 320px;
+  @media screen and (min-width: 1409px) {
     max-width: 320px;
   }
-  @media screen and (max-width: 996px) {
+  @media screen and (max-width: 1408px) {
     flex-basis: 100%;
   }
 }
