--- a/src/components/features/PlayedTokens/PlayedTokens.module.scss
+++ b/src/components/features/PlayedTokens/PlayedTokens.module.scss
@@ -34,11 +34,11 @@
   position: absolute;
   align-items: flex-start;
   justify-content: flex-start;
-  transition: transform 750ms ease-in-out;
+  transition: transform 0.5s ease-in-out;
   pointer-events: none;
   z-index: 2;
   .tokenWrapper {
-    transition: transform 750ms ease-in-out;
+    transition: transform 0.5s ease-in-out;
     > * {
       transition: none;
       // animation: rotate-center 0.6s ease-in-out both;
