--- a/src/components/features/PlayerInfoBox/Box/Box.module.scss
+++ b/src/components/features/PlayerInfoBox/Box/Box.module.scss
@@ -7,6 +7,7 @@
   justify-content: flex-start;
   height: min-content;
   flex-basis: 100%;
+  min-width: 208px;
   > * {
     max-width: 300px;
     min-width: 135px;
