--- a/src/components/features/PlayerInfoBox/PlayerInfoBox.module.scss
+++ b/src/components/features/PlayerInfoBox/PlayerInfoBox.module.scss
@@ -1,19 +1,25 @@
 @use '../../../theme';
 
-.playerInfo {
+.row {
   flex-grow: 1;
   flex-basis: 0;
-  text-align: center;
-  padding: 3rem;
-  background: darken(theme.$colorPrimary,3);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  gap: 3rem;
-  min-width: 320px;
-  @media screen and (min-width: 1409px) {
-    max-width: 320px;
+  .playerInfo {
+    text-align: center;
+    padding: 3rem;
+    background: darken(theme.$colorPrimary,3);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 3rem;
+    min-width: 320px;
+    max-width: 650px;
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    @media screen and (min-width: 1409px) {
+      max-width: 320px;
+    }
   }
   @media screen and (max-width: 1408px) {
     flex-basis: 100%;
