--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,20 @@
 @use 'theme';
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway&family=Share+Tech+Mono&display=swap');
+@font-face {
+  font-family: Raleway;
+  src: url(./fonts/Raleway-Regular.ttf);
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Share Tech Mono";
+  src: url(./fonts/ShareTechMono-Regular.ttf);
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
 
 * {
   box-sizing: border-box;
