--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,14 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: Mansalva;
+  src: url(./fonts/Mansalva-Regular.ttf);
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 * {
   box-sizing: border-box;
 }
