fix id param link

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,6 +8,8 @@
   align-items: center;
   justify-content: center;
   min-height: 100%;
+  max-width: 100%;
+  overflow: hidden;
 
   .footer {
     margin-top: auto;
