--- a/client/src/components/features/Main/Main.module.scss
+++ b/client/src/components/features/Main/Main.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
-  h1 {
+  .title {
     font-family: Mansalva, sans-serif;
     font-size: 3.5rem;
     font-weight: normal;
